# python_package_tutorial

./: --index-url  LICENSE  pyproject.toml
src/palindrome_laligb/: phrase.py
tests/: test_phrase.py
